added proxy endpoint to vercel

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
     {
       "src": "/.*",
       "dest": "/api/vercel-ssr/index.js"
+    },
+    {
+      "src": "/proxy",
+      "dest": "https://botapi.tamtam.chat/"
     }
   ]
 }
